CMakeLists update, include Gameplay.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,9 @@ Board.cpp
 add_library (player
 Player.cpp
 )
+add_library (gameplay
+Gameplay.cpp
+)
 
 # Add test cpp file
 add_executable (board_test
@@ -21,12 +24,17 @@ add_executable (board_test
 add_executable (player_test
 	tests/Player_test.cpp
 )
+add_executable (gameplay_test
+	tests/Gameplay_test.cpp
+)
 
 # Link test executables against gtest & gtest_main
 target_link_libraries(board_test board gtest gtest_main)
 target_link_libraries(player_test player gtest gtest_main)
+target_link_libraries(gameplay_test gameplay gtest gtest_main)
 
-target_link_libraries(NIM board player)
+target_link_libraries(gameplay board player)
+target_link_libraries(NIM gameplay)
 
 add_test(
 	NAME board_test
